--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
 $warning: #b8c0ff;
-$text-primary :#fff;
+$primary : #fff;
+$secondary : #bbd0ff;
+$info :#c8b6ff;
 
 
 @import '../../node_modules/bootstrap/scss/bootstrap';
@@ -9,5 +11,5 @@ $text-primary :#fff;
 body {
   background-color: $warning;
   font-family: "Alegreya Sans", sans-serif;
-  color: $text-primary;
+  color: $primary;
 }
