--- a/src/components/Books/index.scss
+++ b/src/components/Books/index.scss
@@ -4,10 +4,11 @@
     margin: 10px auto;
   }
   .card img {
-    max-width: 100%;
+    max-width: 50%;
     max-height: 200px;
     padding: 2px;
     margin: 0 auto;
+    margin-top: 2;
   }
   
   
