add toast and some css

--- a/src/components/Books/index.scss
+++ b/src/components/Books/index.scss
@@ -2,18 +2,19 @@
   .card {
     max-width: 300px;
     margin: 10px auto;
-    height: 400px;
+  
   }
   .card img {
     max-width: 50%;
     height: 150px;
     padding: 2px;
     margin: 0 auto;
-    margin-top: 2;
+    
   }
   .card-title{
     overflow: hidden;
     text-overflow: ellipsis;
+    height: 5em; 
   }
   
   
