--- a/src/components/Search/index.scss
+++ b/src/components/Search/index.scss
@@ -17,3 +17,10 @@
         max-width:  350px;
     }  
 }
+.toast {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 1050; 
+    width: auto;
+}  
