--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -1,6 +1,6 @@
-.footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
-}
+#root {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+  }
+  
